new call for speakers

--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -104,55 +104,52 @@
     <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
       <h2
         style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
-        WE ARE CALLING FOR SPEAKERS & LDS GALLERY PRESENTATIONS!</h2>
+        WE ARE CALLING FOR SPEAKERS!</h2>
       <!-- Replace these two divs with one thicker bar -->
       <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
 
       <div style="text-align: center; max-width: 800px; margin: 0 auto 60px; line-height: 1.6; color: #555;">
         <p>Join us for the 2025 Legal Design Summit, a global gathering dedicated to innovation, creativity, and
-          collaboration in legal design. Whether you're a seasoned expert, emerging innovator, or visionary thinker,
-          this is your opportunity to inspire change and contribute to the future of law.</p>
+          collaboration in legal design. In 2023, we welcomed over 600 attendees from around the globe, making it an
+          ideal platform to share your vision and expertise.</p>
       </div>
 
       <div style="margin-bottom: 60px;">
         <div style="margin-bottom: 40px;">
           <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">BECOME A
             SPEAKER</h3>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply to
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">AApply to
             share your insights, experiences, and groundbreaking ideas on the Summit stage. As a speaker, you'll inspire
-            and engage with an international audience of forward-thinking professionals, helping shape the future of
-            legal design. Join us in making a difference in the legal industry by applying to be a speaker at our
-            upcoming event.</p>
+            and engage with forward-thinking professionals from around the globe, contributing to the evolution of legal
+            design. Your voice has the power to influence meaningful change within the legal community. Join the ranks
+            of influential speakers and help shape the future of law and innovation.</p>
         </div>
 
         <div style="margin-bottom: 40px;">
-          <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">PRESENT
-            AT THE LEGAL DESIGN GALLERY</h3>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">We're
-            excited to introduce the Legal Design Gallery, an opportunity to show your legal design works and products
-            in practice and inspire others. The Gallery will contain a selected number of works in a separate space next
-            to the main Summit hall that Summit participants can freely observe and discuss as in a museum.</p>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">This is
-            your chance to highlight your innovative projects, cutting-edge technologies, and impactful policy
-            solutions. Apply to engage directly with attendees, spark meaningful conversations, and help shape the
-            future of the legal field through your inspiring work. Apply through the form below - or get in touch with
-            us directly!</p>
+          <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">
+            EXCEPTIONAL EXPERIENCES AWAIT</h3>
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Speakers
+            at past Summits describe their experiences as exceptional, praising the high-quality content, dedicated
+            organization, and the welcoming atmosphere. Attendees and speakers alike have highlighted the event as both
+            inspiring and enriching, emphasizing the warmth and collaborative spirit of our global community.
+          </p>
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply
+            through the form below - or get in touch with us directly!</p>
+
         </div>
       </div>
 
       <div style="text-align: center; margin-bottom: 40px;">
-        <h2 style="font-size: 32px; color: #333; font-weight: 700;">JOIN US!</h2>
+        <a href="https://forms.gle/JfR8aV5xdDeUKGRf9" target="_blank">
+          <h2 style="font-size: 32px; color: #333; font-weight: 700;">JOIN US AS A SPEAKER!</h2>
+        </a>
       </div>
 
-      <div
-        style="background-color: #000; background-image: url('audience-background.jpg'); background-size: cover; background-position: center; height: 300px; border-radius: 10px; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-        <div style="display: flex; justify-content: space-between; align-items: center; width: 100%; padding: 0 60px;">
-          <div
-            style="color: white; font-size: 28px; font-weight: 700; background-color: rgba(0, 0, 0, 0.7); padding: 15px 25px; border-radius: 5px;">
-            CALL FOR OUR LEGAL DESIGN HEROES</div>
-          <img src="images/favicon.png" alt="Legal Design Summit Logo"
-            style="width: 60px; height: 60px; border-radius: 50%; background-color: white; padding: 5px;">
-        </div>
+      <div style="height: 300px; border-radius: 10px; overflow: hidden;">
+        <a href="https://forms.gle/JfR8aV5xdDeUKGRf9" target="_blank">
+          <img src="images/backgrounds/Call_for_Speakers_image.png" alt="Call for Speakers"
+            style="width: 100%; height: 100%; object-fit: cover; display: block;">
+        </a>
       </div>
     </div>
   </div>
