call for speakers front

--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -118,7 +118,7 @@
         <div style="margin-bottom: 40px;">
           <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">BECOME A
             SPEAKER</h3>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">AApply to
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply to
             share your insights, experiences, and groundbreaking ideas on the Summit stage. As a speaker, you'll inspire
             and engage with forward-thinking professionals from around the globe, contributing to the evolution of legal
             design. Your voice has the power to influence meaningful change within the legal community. Join the ranks
