--- a/index.html
+++ b/index.html
@@ -313,18 +313,23 @@
 				
 			</div>
 		-->
-					<div style="text-align: center; margin-bottom: 30px;">
-						<a href="mailto:partnerships@legaldesignsummit.com"
-							style="background-color: #c30979; color: white; padding: 15px 30px; font-size: 18px; font-weight: bold; text-decoration: none; border-radius: 8px; display: inline-block;">
-							Partner with Us to make the 2025 edition happen!
-						</a>
+
+					<!-- Banner Section - Positioned below the mint green header -->
+					<div style="width: 100%; padding: 20px 0; background-color: #f5f5f5; margin-top: -20px;">
+						<div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+							<div
+								style="height: 300px; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+								<a href="https://forms.gle/JfR8aV5xdDeUKGRf9" target="_blank">
+									<img src="images/backgrounds/Call_for_Speakers_image.png" alt="Call for Speakers"
+										style="width: 100%; height: 100%; object-fit: cover; display: block;">
+								</a>
+							</div>
+
+
+						</div>
 					</div>
-					<p style="font-size: 20px; padding-top: 40px;">
-						Do you want to volunteer for the next edition?<br>
-						<a href="volunteer.html" target="_blank" style="color: #50cec1; text-decoration: underline;">
-							Click here
-						</a>
-					</p>
+
+
 				</div>
 			</div>
 
@@ -366,7 +371,12 @@
 	    </div>
 	    -->
 					<div class="padding-top-40 justify-center">
-						<h3>Do you want to make the 2025 Summit happen? Reach out!</h3>
+						<div style="text-align: center; margin-bottom: 30px;">
+							<a href="mailto:partnerships@legaldesignsummit.com"
+								style="background-color: #c30979; color: white; padding: 15px 30px; font-size: 18px; font-weight: bold; text-decoration: none; border-radius: 8px; display: inline-block;">
+								Partner with Us to make the 2025 edition happen!
+							</a>
+						</div>
 
 						<h3>Legal Design Summit is made possible by:</h3>
 
