--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 						<div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
 							<div
 								style="height: 300px; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-								<a href="https://forms.gle/JfR8aV5xdDeUKGRf9" target="_blank">
+								<a href="https://forms.gle/KcnisPFtJxNBs4Vq5" target="_blank">
 									<img src="images/backgrounds/Call_for_Speakers_image.png" alt="Call for Speakers"
 										style="width: 100%; height: 100%; object-fit: cover; display: block;">
 								</a>
