--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -140,13 +140,13 @@
       </div>
 
       <div style="text-align: center; margin-bottom: 40px;">
-        <a href="https://forms.gle/JfR8aV5xdDeUKGRf9" target="_blank">
+        <a href="https://forms.gle/KcnisPFtJxNBs4Vq5" target="_blank">
           <h2 style="font-size: 32px; color: #333; font-weight: 700;">JOIN US AS A SPEAKER!</h2>
         </a>
       </div>
 
       <div style="height: 300px; border-radius: 10px; overflow: hidden;">
-        <a href="https://forms.gle/JfR8aV5xdDeUKGRf9" target="_blank">
+        <a href="https://forms.gle/KcnisPFtJxNBs4Vq5" target="_blank">
           <img src="images/backgrounds/Call_for_Speakers_image.png" alt="Call for Speakers"
             style="width: 100%; height: 100%; object-fit: cover; display: block;">
         </a>
