new team pictures

--- a/about-us.html
+++ b/about-us.html
@@ -60,6 +60,7 @@
                   <li class=" first"><a href="index.html">Home</a></li>
                   <li class=""><a href="program-thursday.html">Program Loading...</a></li>
                   <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                  <li class=""><a href="previous-participants.html">Who is attending?</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
@@ -130,17 +131,7 @@
                 class="icon linkedin">LinkedIn</a></span></p>
           </div>
 
-          <!-- Team Member 3 -->
-          <div class="col-md-4">
-            <h3 style="font-size: 25px;">Partnerships<br><br></h3>
-            <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img
-                  src="images/team/team-2025/Sebastian_Campo Toro_Partnerships.JPG"
-                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
-            </div>
-            <p>Sebastian Campo Toro <br><span class="small"></p>
-            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sebastiancampotoro/"
-                class="icon linkedin">LinkedIn</a></span></p>
-          </div>
+
 
           <!-- Team Member 4 -->
           <div class="col-md-4">
@@ -151,6 +142,30 @@
             </div>
             <p>Laura Hartnett<br><span class="small"></p>
             <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/laurahartnett/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+
+          <!-- Team Member 3 -->
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Production<br><br></h3>
+            <div class="image"><a href="mailto:sarina.hara@legaldesignsummit.com"><img
+                  src="images/team/team-2025/Sarina_Hara_Production.jpg"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+            </div>
+            <p>Sarina Hara <br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sarinahara/"
+                class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+
+          <!-- Team Member 3 -->
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Partnerships<br><br></h3>
+            <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img
+                  src="images/team/team-2025/Sebastian_Campo Toro_Partnerships.JPG"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+            </div>
+            <p>Sebastian Campo Toro <br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sebastiancampotoro/"
                 class="icon linkedin">LinkedIn</a></span></p>
           </div>
 
@@ -178,7 +193,11 @@
           </div>
           <div class="col-md-4">
             <h3 style="font-size: 25px;">Vice-Chair<br><br></h3>
-            <div class="image"><img src="images/team/team-2023/mantyla-sade.jpg"></div>
+            <div class="image"><a href="mailto:sade.mantyla@legaldesignsummit.com"><img
+                  src="images/team/team-2025/sade_mantyla_vice_chair.jpeg"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+              </a>
+            </div>
             <p>Sade Mäntylä<br><span class="small"></p>
             <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/"
                 class="icon linkedin">LinkedIn</a></span></p>
