--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -88,6 +88,7 @@
                   <li class=" first"><a href="index.html">Home</a></li>
                   <li class=""><a href="program-thursday.html">Program Loading...</a></li>
                   <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                  <li class=""><a href="previous-participants.html">Who is attending?</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
