--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -135,7 +135,7 @@
             inspiring and enriching, emphasizing the warmth and collaborative spirit of our global community.
           </p>
           <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply
-            through the form below - or get in touch with us directly!</p>
+            through the form below!</p>
 
         </div>
       </div>
@@ -554,7 +554,7 @@
           <div class="actions">
             <div class="row">
               <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a
-                  href="mailto:<?php print encode_email('info@legaldesignsummit.com'); ?>" class="btn light">Contact
+                  href="mailto:speakers@legaldesignsummit.com>" class="btn light">Contact
                   Us</a></div>
             </div>
 
