--- a/tickets.html
+++ b/tickets.html
@@ -144,25 +144,24 @@
         <div class="textbox" style="margin-top: 50px;">
           <div class="column">
             <h4>How much does it cost to attend?</h4>
-            <p>Completely free! But there is a no-show fee of 50 (student tickets) -150€ (normal tickets)</p>
+            <p>Completely free! But there is a no-show fee of EUR 50 (student tickets) EUR 150 (normal tickets)</p>
             <h4>Where can I get a ticket?</h4>
-            <p>Link to the ticket release will be published on this site and our social media channels on 13 April 2025.
+            <p>Link to the ticket release will be published on this site and our social media channels on 13 April 2025
+              at 9:00 CEST.
             </p>
             <h4>Can I get a ticket for 1 day only?</h4>
             <p> All tickets are for 2 days BUT you can share your ticket with someone else if you cannot participate on
               both days. However, the person acquiring the ticket is responsible for someone to show up on both days.
               Otherwise the general no-show fee applies.</p>
             <h4>Are there different types of tickets?</h4>
-            <p>We have two main types of tickets 1. Summit + workshop or 2. Summit only tickets. Summit + workshop
-              tickets entitles you to attend one of the workshops taking place Wednesday 10 September 2025 in Helsinki.
-              A Summit-only
-              ticket entitles you to both Summit days. There are student-ticket versions of both types.</p>
+            <p>We have two main types of tickets; student and normal. A student should be able to present a student card
+              at the event. The difference between the ticket-types are the no-show amounts.</p>
             <h4>Can I get a normal ticket even if I am a student?</h4>
             <p>Yes, you can, but please note then the no-show fee will be 150e!</p>
             <h4>How many tickets can I purchase?</h4>
             <p>Tickets are limited to one per person to increase inclusivity & accessibility of the summit</p>
             <h4>What if I need to cancel my ticket?</h4>
-            <p>Tickets can be canceled until 14 August 2023 through the confirmation email you received from Ti.to
+            <p>Tickets can be canceled until 10 August 2025 through the confirmation email you received from Ti.to
             <ul style="list-style-type: disc; padding-left: 20px">
               <li>Click view order -> scroll down and you can find the 'view/edit ticket.'</li>
               <li>Reassign/edit details OR scroll down to cancel your ticket. Cancelation cannot be undone</li>
