--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
 		</div>
 	</div>
 	<div class="notification-section">
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdcuaswTaYZ7n79MputYCVrCZiopyA82FS_GWKvLSz7hGTY5w/viewform"
-			target="_blank" class="notify-btn">
-			Get notified when tickets drop
+		<a href="https://ti.to/legal-design-summit-2025/legal-design-summit-2025" target="_blank" class="notify-btn">
+			Get your tickets here!
 		</a>
 	</div>
 
