--- a/tickets.html
+++ b/tickets.html
@@ -132,9 +132,8 @@
         <!-- <div style="height: 30px;" div class="margin-top-40"><h4><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" style="color: #50cec1;" class="link-hover">Link to the ticket site</a></h4></div> -->
         <p style="margin-top: 100px;"></p>
         <div class="notification-section">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcuaswTaYZ7n79MputYCVrCZiopyA82FS_GWKvLSz7hGTY5w/viewform"
-            target="_blank" class="notify-btn">
-            Get notified when tickets drop
+          <a href="https://ti.to/legal-design-summit-2025/legal-design-summit-2025" target="_blank" class="notify-btn">
+            Get your tickets here
           </a>
         </div>
 
@@ -145,10 +144,7 @@
           <div class="column">
             <h4>How much does it cost to attend?</h4>
             <p>Completely free! But there is a no-show fee of EUR 50 (student tickets) EUR 150 (normal tickets)</p>
-            <h4>Where can I get a ticket?</h4>
-            <p>Link to the ticket release will be published on this site and our social media channels on 13 April 2025
-              at 9:00 CEST.
-            </p>
+
             <h4>Can I get a ticket for 1 day only?</h4>
             <p> All tickets are for 2 days BUT you can share your ticket with someone else if you cannot participate on
               both days. However, the person acquiring the ticket is responsible for someone to show up on both days.
