update ticket info

--- a/tickets.html
+++ b/tickets.html
@@ -128,12 +128,12 @@
 
         <div class="margin-top-40"></div>
 
-        <h4>Stay tuned for the 2025 tickets</h4>
+
         <!-- <div style="height: 30px;" div class="margin-top-40"><h4><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" style="color: #50cec1;" class="link-hover">Link to the ticket site</a></h4></div> -->
         <p style="margin-top: 100px;"></p>
         <div class="notification-section">
           <a href="https://ti.to/legal-design-summit-2025/legal-design-summit-2025" target="_blank" class="notify-btn">
-            Get your tickets here
+            Get your tickets here!
           </a>
         </div>
 
@@ -144,7 +144,10 @@
           <div class="column">
             <h4>How much does it cost to attend?</h4>
             <p>Completely free! But there is a no-show fee of EUR 50 (student tickets) EUR 150 (normal tickets)</p>
-
+            <h4>What about Brainfactory?</h4>
+            <p>Our extremley popular workshops will return in a new format and take place on 10 September 2025. In order
+              to register for a workshop, you need to have a valid LDS ticket. Registration for the workshops 10
+              September 2025 will open soon - stay tuned!</p>
             <h4>Can I get a ticket for 1 day only?</h4>
             <p> All tickets are for 2 days BUT you can share your ticket with someone else if you cannot participate on
               both days. However, the person acquiring the ticket is responsible for someone to show up on both days.
@@ -157,7 +160,7 @@
             <h4>How many tickets can I purchase?</h4>
             <p>Tickets are limited to one per person to increase inclusivity & accessibility of the summit</p>
             <h4>What if I need to cancel my ticket?</h4>
-            <p>Tickets can be canceled until 10 August 2025 through the confirmation email you received from Ti.to
+            <p>Tickets can be canceled until 25 August 2025 through the confirmation email you received from Ti.to
             <ul style="list-style-type: disc; padding-left: 20px">
               <li>Click view order -> scroll down and you can find the 'view/edit ticket.'</li>
               <li>Reassign/edit details OR scroll down to cancel your ticket. Cancelation cannot be undone</li>
@@ -167,7 +170,7 @@
                 be sent to: tickets@legaldesignsummit.com</li>
             </ul>
             </p>
-            <h4>Tickets are sold out, can I register for a waiting list?</h4>
+            <h4>If tickets are sold out, can I register for a waiting list?</h4>
             <p>Yes! There will be a wait-list for you to sign up through</p>
 
           </div>
