update speaker page

--- a/previous-participants.html
+++ b/previous-participants.html
@@ -263,7 +263,7 @@
                                 <ul class="menu">
                                     <li class=" first"><a href="index.html">Home</a></li>
                                     <li class=""><a href="program-thursday.html">Program Loading...</a></li>
-                                    <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                                    <li class=""><a href="speakers-thursday.html">Speakers</a></li>
                                     <li class=""><a href="previous-participants.html">Who is attending?</a></li>
                                     <li class=""><a href="about-us.html">Meet the team</a></li>
                                     <li class=""><a href="tickets.html">Tickets</a></li>
