--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -87,7 +87,7 @@
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
                   <li class=""><a href="program-thursday.html">Program Loading...</a></li>
-                  <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                  <li class=""><a href="speakers-thursday.html">Speakers</a></li>
                   <li class=""><a href="previous-participants.html">Who is attending?</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
@@ -105,54 +105,19 @@
     <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
       <h2
         style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
-        WE ARE CALLING FOR SPEAKERS!</h2>
+        The call for speakers is now closed - thank you for all submissions!</h2>
       <!-- Replace these two divs with one thicker bar -->
       <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
 
       <div style="text-align: center; max-width: 800px; margin: 0 auto 60px; line-height: 1.6; color: #555;">
-        <p>Join us for the 2025 Legal Design Summit, a global gathering dedicated to innovation, creativity, and
-          collaboration in legal design. In 2023, we welcomed over 600 attendees from around the globe, making it an
-          ideal platform to share your vision and expertise.</p>
-      </div>
-
-      <div style="margin-bottom: 60px;">
-        <div style="margin-bottom: 40px;">
-          <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">BECOME A
-            SPEAKER</h3>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply to
-            share your insights, experiences, and groundbreaking ideas on the Summit stage. As a speaker, you'll inspire
-            and engage with forward-thinking professionals from around the globe, contributing to the evolution of legal
-            design. Your voice has the power to influence meaningful change within the legal community. Join the ranks
-            of influential speakers and help shape the future of law and innovation.</p>
-        </div>
-
-        <div style="margin-bottom: 40px;">
-          <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">
-            EXCEPTIONAL EXPERIENCES AWAIT</h3>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Speakers
-            at past Summits describe their experiences as exceptional, praising the high-quality content, dedicated
-            organization, and the welcoming atmosphere. Attendees and speakers alike have highlighted the event as both
-            inspiring and enriching, emphasizing the warmth and collaborative spirit of our global community.
-          </p>
-          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply
-            through the form below!</p>
-
-        </div>
-      </div>
-
-      <div style="text-align: center; margin-bottom: 40px;">
-        <a href="https://forms.gle/KcnisPFtJxNBs4Vq5" target="_blank">
-          <h2 style="font-size: 32px; color: #333; font-weight: 700;">JOIN US AS A SPEAKER!</h2>
-        </a>
-      </div>
-
-      <div style="height: 300px; border-radius: 10px; overflow: hidden;">
-        <a href="https://forms.gle/KcnisPFtJxNBs4Vq5" target="_blank">
-          <img src="images/backgrounds/Call_for_Speakers_image.png" alt="Call for Speakers"
-            style="width: 100%; height: 100%; object-fit: cover; display: block;">
-        </a>
+        <p>Speakers for the 2025 Summit will drop soon - stay tuned!</p>
       </div>
     </div>
+
+
+
+
+  </div>
   </div>
   <!--
   <h2>THANK YOU 2023 SPEAKERS</h2>
