--- a/index.html
+++ b/index.html
@@ -370,6 +370,10 @@
 						<ul class="flex-container wrap">
 							<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law"
 									target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
+
+							<li class="flex-item" style="width: 170px;"><a
+									href="https://www.dlapiper.com/en/about-us/law-and" target="_blank"><img
+										src="images/collabs/DLA Piper.jpg"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -442,6 +446,8 @@
 					target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>-->
 			<li class="flex-item" style="width: 150px;"><a href="https://legalhackers.org/" target="_blank"><img
 						src="images/collabs/lh.png"></a></li>
+			<li class="flex-item" style="width: 150px;"><a href="https://www.hiil.org/" target="_blank"><img
+						src="images/collabs/HiiL_Logo color tagline.png"></a></li>
 			<!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
 						src="images/collabs/nu-law.png"></a></li>
 			<li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
