--- a/index.html
+++ b/index.html
@@ -511,6 +511,8 @@
 			<li class="flex-item" style="width: 270px;"><a
 					href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img
 						src="images/collabs/Erasmus_program.PNG"></a></li>-->
+			<li class="flex-item" style="width: 220px;"><a href="https://taltech.ee/en/department-law"
+					target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
 		</ul>
 
 	</div>
