--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
 							<div class="menu-container">
 								<ul class="menu">
 									<li class=" first"><a href="#">Home</a></li>
+									<li class=" first"><a href="brainfactory.html">Brainfactory workshops</a></li>
 									<li class=""><a href="program-thursday.html">Program Loading...</a></li>
-									<li class=""><a href="speakers-thursday.html">Speakers</a></li>
+
 									<li class=""><a href="previous-participants.html">Who is attending?</a></li>
 									<li class=""><a href="about-us.html">Meet the team</a></li>
 									<li class=""><a href="tickets.html">Tickets</a></li>
@@ -440,10 +441,10 @@
 			<li class="flex-item" style="width: 300px"><a href="https://www.it-oikeus.org/" target="_blank"><img
 						src="images/collabs/it.png"></a></li>
 			<li class="flex-item"><a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png"></a>
-			</li>
+			</li>-->
 			<li class="flex-item"><a
 					href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
-					target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>-->
+					target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
 			<li class="flex-item" style="width: 150px;"><a href="https://legalhackers.org/" target="_blank"><img
 						src="images/collabs/lh.png"></a></li>
 			<li class="flex-item" style="width: 150px;"><a href="https://www.hiil.org/" target="_blank"><img
