--- a/tickets.html
+++ b/tickets.html
@@ -97,8 +97,9 @@
               <div class="menu-container">
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
+                  <li class=" first"><a href="brainfactory.html">Brainfactory workshops</a></li>
                   <li class=""><a href="program-thursday.html">Program Loading...</a></li>
-                  <li class=""><a href="speakers-thursday.html">Speakers</a></li>
+
                   <li class=""><a href="previous-participants.html">Who is attending?</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
