BF button update

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -215,72 +215,93 @@
           14:00-16:00.
         </p>
 
+        <div class="notification-section">
+          <a href="https://forms.gle/iznAzEELzg8ia43b9" target="_blank" class="notify-btn">
+            Register here!
+          </a>
+        </div>
 
-      </div>
-    </div>
-    <div class="row justify-content-md-center justify-center">
-      <div class="col-lg-6 col-xs-12" style="padding-top: 100px;">
-        <div class="flex-item" style="width: 560; height: 315;"><a href="https://www.youtube.com/embed/6dZudoTT8S8"
-            target="_blank"><img src="images/brainfactory/Bf-youtube.jpg"></a></div>
-        <p style="line-height: 14px;">Check out the awesome aftermovie from the last BrainFactory <br><br>(opens into
-          a new tab)</p>
-      </div>
-      <div class="col-lg-6 col-xs-12" style="text-align: left; padding-left: 0px;">
-        <h3>FAQ</h3>
-        <div class="timeline">
-          <div class="faq-item">
-            <div class="bubble"></div>
-
-            <h4>Q: How do I participate?</h4>
-            <p>We’ll start taking early participants to sign up on 5 May and will open more slots in early June for
-              another round of registration. Follow Legal Design Summit on LinkedIn and Instagram for the latest.</p>
-
-            When registration is open, you’ll be able to register <a href="https://forms.gle/iznAzEELzg8ia43b9">
-              here
-            </a>
-            <br><br>
-            As 10 September gets closer, we will get back to all registered participants to rank their areas of workshop
-            interest. We'll do our best to match you with your interest, but rest assured there is something for
-            everyone in these workshops with the chance to engage in legal design and how it applies to so many areas of
-            legal problems.
-
-          </div>
-          <div class="faq-item">
-            <div class="bubble"></div>
-            <h4>Q: I can only make one workshop, is that possible?</h4>
-            <p>We’re looking for fully-committed BrainFactory participants who are in for the full day. </p>
-          </div>
-          <div class="faq-item">
-            <div class="bubble"></div>
-            <h4>Q: This is my first rodeo - is this still for me? </h4>
-            <p>Yes! We will, to the best of our ability, match you with a specialized track of workshops that will offer
-              you the opportunity to get your feet wet!
-              Also, legal designers are about the nicest people in the legal field you could ever meet. Everyone is
-              willing to answer questions. After all, having a “beginner’s mind” is a key tenet of legal design! Come
-              join us.</p>
-          </div>
-          <div class="faq-item">
-            <div class="bubble"></div>
-            <h4>Q: This is not my first rodeo - can I join?</h4>
-            <p>
-              Yes! Meet new people, learn from new experts, and apply legal design to the most current problems facing
-              legal professionals. You may even stretch yourself to take workshops outside your daily area and learn
-              through analogous experience how legal design can work in different fields.
+        <div class="row justify-content-md-center justify-center" style="padding-top: 100px; background-color: #50cec1">
+          <!-- Video Column -->
+          <div class="col-lg-6 col-xs-12">
+            <div class="flex-item" style="width: 100%; max-width: 560px;">
+              <video width="100%" height="315" controls>
+                <source src="images/brainfactory/BRAIN FACTORY HIGHLIGHTS 2023.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <p style="line-height: 14px;">
+              Check out the awesome aftermovie from the last BrainFactory <br><br>(you can watch it directly here)
             </p>
           </div>
-          <div class="faq-item">
-            <div class="bubble"></div>
-            <h4>Q: I have more questions - who do I contact?</h4>
-            <p>This years’ Team Lead Laura Hartnett and her team will be happy to answer all your questions
-              about the BrainFactory:<br><br>Please reach out to us <a href="mailto:brainfactory@legaldesignsummit.com"
-                style="color: black; text-decoration: underline;">brainfactory@legaldesignsummit.com</a></p>
+
+          <!-- FAQ Column -->
+          <div class="col-lg-6 col-xs-12"
+            style="text-align: left; padding-left: 20px; background-color: #50cec1; color: black;">
+            <h3>FAQ</h3>
+            <div class="timeline">
+              <div class="faq-item">
+                <div class="bubble"></div>
+
+                <h4>Q: How do I participate?</h4>
+                <p>
+                  We’ll start taking early participants to sign up on 5 May and will open more slots in early June for
+                  another round of registration. Follow Legal Design Summit on LinkedIn and Instagram for the latest.
+                </p>
+                <p>
+                  When registration is open, you’ll be able to register
+                  <a href="https://forms.gle/iznAzEELzg8ia43b9" style="color: #c30979;"> here</a>
+                </p>
+                <p>
+                  As 10 September gets closer, we will get back to all registered participants to rank their areas of
+                  workshop
+                  interest. We'll do our best to match you with your interest, but rest assured there is something for
+                  everyone in these workshops with the chance to engage in legal design and how it applies to so many
+                  areas of
+                  legal problems.
+                </p>
+              </div>
+
+              <div class="faq-item">
+                <div class="bubble"></div>
+                <h4>Q: I can only make one workshop, is that possible?</h4>
+                <p>We’re looking for fully-committed BrainFactory participants who are in for the full day. </p>
+              </div>
+              <div class="faq-item">
+                <div class="bubble"></div>
+                <h4>Q: This is my first rodeo - is this still for me? </h4>
+                <p>Yes! We will, to the best of our ability, match you with a specialized track of workshops that will
+                  offer
+                  you the opportunity to get your feet wet!
+                  Also, legal designers are about the nicest people in the legal field you could ever meet. Everyone is
+                  willing to answer questions. After all, having a “beginner’s mind” is a key tenet of legal design!
+                  Come
+                  join us.</p>
+              </div>
+              <div class="faq-item">
+                <div class="bubble"></div>
+                <h4>Q: This is not my first rodeo - can I join?</h4>
+                <p>
+                  Yes! Meet new people, learn from new experts, and apply legal design to the most current problems
+                  facing
+                  legal professionals. You may even stretch yourself to take workshops outside your daily area and learn
+                  through analogous experience how legal design can work in different fields.
+                </p>
+              </div>
+              <div class="faq-item">
+                <div class="bubble"></div>
+                <h4>Q: I have more questions - who do I contact?</h4>
+                <p>This years’ Team Lead Laura Hartnett and her team will be happy to answer all your questions
+                  about the BrainFactory:<br><br>Please reach out to us <a
+                    href="mailto:brainfactory@legaldesignsummit.com"
+                    style="color: black; text-decoration: underline;">brainfactory@legaldesignsummit.com</a></p>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
     </div>
-
-  </div>
-  </div>
   </div>
   </div>
 
