--- a/brainfactory.html
+++ b/brainfactory.html
@@ -221,19 +221,20 @@
           </a>
         </div>
 
-        <div class="row justify-content-md-center justify-center" style="padding-top: 100px; background-color: #50cec1">
-          <!-- Video Column -->
+        <div class="row justify-content-md-center justify-center" style="padding-top: 100px;">
           <div class="col-lg-6 col-xs-12">
             <div class="flex-item" style="width: 100%; max-width: 560px;">
-              <video width="100%" height="315" controls>
-                <source src="images/brainfactory/BRAIN FACTORY HIGHLIGHTS 2023.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/GvknKJ2k98c"
+                title="BrainFactory Highlights" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+              </iframe>
             </div>
             <p style="line-height: 14px;">
               Check out the awesome aftermovie from the last BrainFactory <br><br>(you can watch it directly here)
             </p>
           </div>
+
 
           <!-- FAQ Column -->
           <div class="col-lg-6 col-xs-12"
