--- a/brainfactory.html
+++ b/brainfactory.html
@@ -276,8 +276,7 @@
                   you the opportunity to get your feet wet!
                   Also, legal designers are about the nicest people in the legal field you could ever meet. Everyone is
                   willing to answer questions. After all, having a “beginner’s mind” is a key tenet of legal design!
-                  Come
-                  join us.</p>
+                  Come join us.</p>
               </div>
               <div class="faq-item">
                 <div class="bubble"></div>
