--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
 		<p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
 
 		<ul class="flex-container wrap">
+			<li class="flex-item" style="width: 150px"><a href="https://www.copenhagenlegaltech.dk/"
+					target="_blank"><img src="images/collabs/clt.png"></a></li>
 			<!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
 						src="images/collabs/aalto.png"></a></li>
 			<li class="flex-item" style="width: 150px"><a href="https://www.copenhagenlegaltech.dk/"
