--- a/about-us.html
+++ b/about-us.html
@@ -169,6 +169,16 @@
             <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sebastiancampotoro/"
                 class="icon linkedin">LinkedIn</a></span></p>
           </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Head of People<br><br></h3>
+            <div class="image"><a href="mailto:martina.ihamuotila@legaldesignsummit.com"><img
+                  src="images/team/Martina_Ihamuotila.png"
+                  style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
+            </div>
+            <p>Martina Ihamuotila<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/martina-ihamuotila-84202b1aa/
+                class=" icon linkedin">LinkedIn</a></span></p>
+          </div>
 
         </div>
       </div>
