--- a/index.html
+++ b/index.html
@@ -366,16 +366,28 @@
 							</a>
 						</div>
 
-						<h3>Legal Design Summit is made possible by:</h3>
-
 						<ul class="flex-container wrap">
-							<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law"
-									target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
+							<li class="flex-item" style="width: 170px;">
+								<a href="https://www.helsinki.fi/en/faculty-law" target="_blank">
+									<img src="images/collabs/Helsingin-yliopisto-oikis.PNG">
+								</a>
+							</li>
+							<li class="flex-item" style="width: 170px;">
+								<a href="https://www.dlapiper.com/en/about-us/law-and" target="_blank">
+									<img src="images/collabs/DLA Piper.jpg">
+								</a>
+							</li>
 
-							<li class="flex-item" style="width: 170px;"><a
-									href="https://www.dlapiper.com/en/about-us/law-and" target="_blank"><img
-										src="images/collabs/DLA Piper.jpg"></a></li>
+							<!-- Force next logos to next line -->
+							<li style="flex-basis: 100%; height: 0;"></li>
+
+							<li class="flex-item" style="width: 170px;">
+								<a href="https://ey.com" target="_blank">
+									<img src="images/collabs/EY_Law_ Black.png">
+								</a>
+							</li>
 						</ul>
+
 					</div>
 				</div>
 
@@ -516,6 +528,8 @@
 						src="images/collabs/Erasmus_program.PNG"></a></li>-->
 			<li class="flex-item" style="width: 220px;"><a href="https://taltech.ee/en/department-law"
 					target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
+			<li class="flex-item" style="width: 220px;"><a href="https://chancerylaneproject.org/" target="_blank"><img
+						src="images/logos/Logo blue.png"></a></li>
 		</ul>
 
 	</div>
