update logo and their visibility

--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
 
 	<!-- Wrapper // Content Events Section Begins -->
 	<div class="wrapper color-secondary twitter" style="background-color: #f2f2f2;">
+		<div class="content-main">
+
+			<h3 class="plain justify-center">The Legal Design Summit <span class="enhanced grey">brings
+					together</span> international experts in the fields of law, design, and digital services.
+			</h3>
+		</div>
 
 		<!-- Container Section Begins -->
 
@@ -336,6 +342,7 @@
 
 	<div class="wrapper color-secondary events" style="background-color: #fff">
 
+
 		<!-- Container Section Begins -->
 
 		<div class="container">
@@ -346,55 +353,63 @@
 
 				<!-- Content Main Section Begins -->
 
-				<div class="content-main">
 
-					<h3 class="plain justify-center">The Legal Design Summit <span class="enhanced grey">brings
-							together</span> international experts in the fields of law, design, and digital services.
-					</h3>
 
-					<!--				<div class="row no-gutters">
+				<!--				<div class="row no-gutters">
 						<div class="col-sm-4 justify-center"><img src="images/events/event-2.png"></div>
 						<div class="col-sm-4 justify-center"><a href="/side-events"><img src="images/events/event-3.png"></a></div>
 						<div class="col-sm-4 justify-center"><a href="/brainfactory"><img src="images/events/event-4.png"></a></div>
 	    </div>
 	    -->
-					<div class="padding-top-40 justify-center">
+				<div style="padding-top: 40px; text-align: center;">
+					<h3>The Legal Design Summit is made possible by:</h3>
+					<p></p>
 
+					<!-- First row of logos with increased spacing -->
+					<ul
+						style="display: flex; justify-content: center; flex-wrap: wrap; gap: 50px; padding: 20px 0; list-style: none; margin: 0;">
+						<li style="width: 170px; display: flex; justify-content: center; align-items: center;">
+							<a href="https://www.helsinki.fi/en/faculty-law" target="_blank">
+								<img src="images/collabs/Helsingin-yliopisto-oikis.PNG" alt="Helsinki University"
+									style="max-width: 100%; height: auto; object-fit: contain;">
+							</a>
+						</li>
+						<li style="width: 170px; display: flex; justify-content: center; align-items: center;">
+							<a href="https://www.dlapiper.com/en/about-us/law-and" target="_blank">
+								<img src="images/collabs/DLA Piper.jpg" alt="DLA Piper"
+									style="max-width: 100%; height: auto; object-fit: contain;">
+							</a>
+						</li>
+						<li style="width: 170px; display: flex; justify-content: center; align-items: center;">
+							<a href="https://www.legora.com" target="_blank">
+								<img src="images/collabs/Legora (word logo).png" alt="Legora"
+									style="max-width: 100%; height: auto; object-fit: contain;">
+							</a>
+						</li>
+					</ul>
 
-						<ul class="flex-container wrap">
-							<li class="flex-item" style="width: 170px;">
-								<a href="https://www.helsinki.fi/en/faculty-law" target="_blank">
-									<img src="images/collabs/Helsingin-yliopisto-oikis.PNG">
-								</a>
-							</li>
-							<li class="flex-item" style="width: 170px;">
-								<a href="https://www.dlapiper.com/en/about-us/law-and" target="_blank">
-									<img src="images/collabs/DLA Piper.jpg">
-								</a>
-							</li>
-
-							<!-- Force next logos to next line -->
-							<li style="flex-basis: 100%; height: 0;"></li>
-
-							<li class="flex-item" style="width: 170px;">
-								<a href="https://ey.com" target="_blank">
-									<img src="images/collabs/EY_Law_ Black.png">
-								</a>
-							</li>
-						</ul>
-
-					</div>
+					<!-- Second row with only EY -->
+					<ul style="display: flex; justify-content: center; padding: 20px 0; list-style: none; margin: 0;">
+						<li style="width: 170px; display: flex; justify-content: center; align-items: center;">
+							<a href="https://ey.com" target="_blank">
+								<img src="images/collabs/EY_Law_ Black.png" alt="EY Law"
+									style="max-width: 100%; height: auto; object-fit: contain;">
+							</a>
+						</li>
+					</ul>
 				</div>
-
-				<!-- Content Main Section Ends -->
 
 			</div>
 
-			<!-- Content Section Ends -->
+			<!-- Content Main Section Ends -->
 
 		</div>
 
-		<!-- Container Section Ends -->
+		<!-- Content Section Ends -->
+
+	</div>
+
+	<!-- Container Section Ends -->
 
 	</div>
 
